<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan">

    <ScrollView
        android:id="@+id/sv_form_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.securemypasswords.secureMyPasswords.SetupActivity">

            <ImageView
                android:id="@+id/iv_setup_lock"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/cadena"
                android:paddingTop="50dp"
                android:src="@drawable/lock" />

            <TextView
                android:id="@+id/tv_setup_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/setup_master_password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/et_setup_passwordStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <EditText
                android:id="@+id/et_setup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_setup_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/prompt_confirmPassword"
                android:imeActionId="6"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/bt_setup_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <!--<Button
        android:id="@+id/bt_setup_onlineAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/not_implemented"
        android:textColor="@color/white"
        android:textStyle="bold" />-->
</RelativeLayout>