...
    <string name="sync_action_tooltip">Select the action that you want to perform:</string>
    <string name="loginWithoutApiKey">Error: The server haven\'t send authKey</string>
    <string name="turnOnNetwork">You need an internet connection to do that</string>
    <string name="internet_permission_error">This feature need internet permissions</string>
    <string name="server_answer_error">Error in server answer please try again later!</string>
    <string name="title_activity_password_download_manager">PasswordDownloadManager</string>
    <string name="tooSmall_password_error">The password is to small</string>
    <string name="password_not_match_error">The two passwords does not match</string>
    <string name="wrongLogin">your login or password is wrong</string>

</resources>

